--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.10.1",
+    "cors": "^2.8.5",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
