--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.10.1",
     "cors": "^2.8.5",
+    "moment": "^2.30.1",
     "next": "12.1.6",
-    "react": "18.1.0",
+    "react": "^19.2.0",
     "react-dom": "18.1.0",
+    "react-moment": "^1.1.3",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
